2016-07-07  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2016-06-07  Richard Biener  <rguenther@suse.de>

	PR middle-end/71423
	* match.pd ((X | ~Y) -> Y <= X): Properly invert the comparison
	for signed ops.

	2016-06-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71452
	* tree-ssa.c (non_rewritable_lvalue_p): Make sure that the
	type used for the SSA rewrite has enough precision to cover
	the dynamic type of the location.

	2016-06-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71522
	* tree-ssa.c (non_rewritable_lvalue_p): Do not rewrite non-float
	copying into float copying.

2016-07-01  Eric Botcazou  <ebotcazou@adacore.com>

	* config/arm/arm.c (arm_function_ok_for_sibcall): Add another check
	for NULL decl.

2016-06-30  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/71693
	* fold-const.c (fold_binary_loc) <case RROTATE_EXPR>: Cast
	TREE_OPERAND (arg0, 0) and TREE_OPERAND (arg0, 1) to type
	first when permuting bitwise operation with rotate.  Cast
	TREE_OPERAND (arg0, 0) to type when cancelling two rotations.

2016-06-21  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2016-06-21 trunk r237639.

	PR target/30417
	* config/avr/gen-avr-mmcu-specs.c (print_mcu):
	[*link_data_start]: Wrap -Tdata into %{!Tdata:...}.
	[*link_text_start]: Wrap -Ttext into %{!Ttext:...}.

2016-06-21  Georg-Johann Lay  <avr@gjlay.de>

	PR target/71103
	* config/avr/avr.md (movqi): Only handle loading subreg:qi of
	constant addresses if can_create_pseudo_p.

2016-06-20  Georg-Johann Lay  <avr@gjlay.de>
	    Pitchumani Sivanupandi  <pitchumani.s@atmel.com>

	Backport from 2016-06-20 trunk r237589, r236558.

	PR target/71103
	* config/avr/avr.md (movqi): Handle loading subreg:qi (const,
	symbol_ref,label_ref).

2016-06-16  Jakub Jelinek  <jakub@redhat.com>

	PR target/71554
	* config/i386/i386.md (setcc + movzbl peephole2): Use reg_set_p.
	(setcc + and peephole2): Likewise.

	Backported from mainline