@@ -1,3 +1,11 @@
+2016-07-07  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2016-04-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/70336
+	* match.pd (nested int casts): Limit to GIMPLE.
+
 2016-07-07  Richard Biener  <rguenther@suse.de>
 
 	Backport from mainline
